--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
       <li class="pcounter__value" id="pcount_bonus">0</li>
       <li class="pcounter__label">Bonus Chain</li>
       <li class="pcounter__value" id="pcount_bonus_chain">0</li>
+      <li class="pcounter__label">Points</li>
+      <li class="pcounter__value" id="pcount_points">0</li>
     </ul>
   </section>
   <script src="pcounter_client.js"></script>
