--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <title>PCounter</title>
-  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <section class="container">
@@ -22,6 +21,6 @@
       <li class="pcounter__value" id="pcount_points">0</li>
     </ul>
   </section>
-  <script src="pcounter_client.js"></script>
+  <script src="js/app.bundle.js"></script>
 </body>
 </html>
