update style (incomplete)

--- a/public/index.html
+++ b/public/index.html
@@ -8,19 +8,14 @@
 <body>
   <section class="container">
     <span>CR Stealth block.III</span>
-    <ul class="pcounter">
-      <li class="pcounter__label">Total</li>
-      <li class="pcounter__value" id="pcount_total">0</li>
-      <li class="pcounter__label">Current</li>
-      <li class="pcounter__value" id="pcount_current">0</li>
-      <li class="pcounter__label">Bonus</li>
-      <li class="pcounter__value" id="pcount_bonus">0</li>
-      <li class="pcounter__label">Bonus Chain</li>
-      <li class="pcounter__value" id="pcount_bonus_chain">0</li>
-      <li class="pcounter__label">Points</li>
-      <li class="pcounter__value" id="pcount_points">0</li>
-    </ul>
   </section>
+  <ul class="pcounter">
+    <li><span class="pcounter__value" id="pcount_total">0</span><span class="pcounter__label">Total</span>       </li>
+    <li><span class="pcounter__value" id="pcount_current">0</span><span class="pcounter__label">Current</span>     </li>
+    <li><span class="pcounter__value" id="pcount_bonus">0</span><span class="pcounter__label">Bonus</span>       </li>
+    <li><span class="pcounter__value" id="pcount_bonus_chain">0</span><span class="pcounter__label">Bonus Chain</span> </li>
+    <li><span class="pcounter__value" id="pcount_points">0</span><span class="pcounter__label">Points</span>      </li>
+  </ul>
   <script src="js/app.bundle.js"></script>
 </body>
 </html>
