--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,26 @@
   <section class="pcounter" id="pcounter">
     <div class="pcounter__title">CR STEALTH block.III / JB</div>
     <ul class="pcounter__status">
-      <li><span class="pcounter__value" id="pcount_total">0</span><span class="pcounter__label">Total</span></li>
-      <li><span class="pcounter__value" id="pcount_current">0</span><span class="pcounter__label">Current</span></li>
-      <li><span class="pcounter__value" id="pcount_bonus">0</span><span class="pcounter__label">Bonus</span></li>
-      <li><span class="pcounter__value" id="pcount_bonus_chain">0</span><span class="pcounter__label">Bonus Chain</span> </li>
-      <li class="hide"><span class="pcounter__value" id="pcount_points">0</span><span class="pcounter__label">Points</span> </li>
+      <li>
+        <span class="pcounter__label">Total</span>
+        <span class="pcounter__value" id="pcount_total">0</span>
+      </li>
+      <li>
+        <span class="pcounter__label">Current</span>
+        <span class="pcounter__value" id="pcount_current">0</span>
+      </li>
+      <li>
+        <span class="pcounter__label">Bonus</span>
+        <span class="pcounter__value" id="pcount_bonus">0</span>
+      </li>
+      <li>
+        <span class="pcounter__label">Bonus Chain</span> 
+        <span class="pcounter__value" id="pcount_bonus_chain">0</span>
+      </li>
+      <li class="hide">
+        <span class="pcounter__label">Points</span>
+        <span class="pcounter__value" id="pcount_points">0</span>
+      </li>
     </ul>
   </section>
   <script src="js/app.bundle.js"></script>
