--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <section class="pcounter" id="pcounter">
-    <div class="pcounter__title">CR STEALTH block.III / JB</div>
+    <div id="pcount_title" class="pcounter__title"></div>
     <ul class="pcounter__status">
       <li>
         <span class="pcounter__label">Total</span>
@@ -21,8 +21,8 @@
         <span class="pcounter__label">Bonus</span>
         <span class="pcounter__value" id="pcount_bonus">0</span>
       </li>
-      <li>
-        <span class="pcounter__label">Bonus Chain</span> 
+      <li class="hide">
+        <span class="pcounter__label">Bonus Chain</span>
         <span class="pcounter__value" id="pcount_bonus_chain">0</span>
       </li>
       <li class="hide">
