--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>PCounter</title>
-<link rel="stylesheet" href="/app.c3f9f951.css"></head>
+</head>
 <body>
   <section class="pcounter" id="pcounter">
     <div id="pcount_title" class="pcounter__title"></div>
@@ -31,6 +31,6 @@
       </li>
     </ul>
   </section>
-  <script src="/app.c3f9f951.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
