frontend: Add DraggableJS library.

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,7 +6,7 @@
   <title>PCounter</title>
 </head>
 <body>
-  <section class="pcounter" id="pcounter">
+  <div class="pcounter" id="pcounter">
     <div id="pcount_title" class="pcounter__title"></div>
     <ul class="pcounter__status">
       <li>
